--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "webpack",
-    "start": "nodemon ."
+    "wbuild": "webpack -w",
+    "start": "nodemon .",
+    "test":"webpack && nodemon ."
   },
   "keywords": [],
   "author": "rei-rala",
@@ -19,7 +21,6 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.1",
-    "request": "^2.88.2"
+    "express": "^4.17.1"
   }
 }
