30-09 id validation && fixes

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "wbuild": "webpack -w",
     "start": "nodemon .",
-    "test":"webpack && nodemon ."
+    "comp":"webpack && nodemon ."
   },
   "keywords": [],
   "author": "rei-rala",
